ifcc-test-output/testfiles-KnownBugs-24_multiple_affectation_a_la_declaration_sans_declarer/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:13: error: ‘a’ undeclared (first use in this function)
    2 |     int b = a = 2;
      |             ^
input.c:2:13: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
